added adaptability on iphone 6,7,8,X

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
       </section>
       <section class="testimonials">
         <div class="testimonials__top">
-          <div class="section__intro steps__intro">
+          <div class="section__intro testimonials__intro">
               <img class="section__intro_logo" src="images/blue-doters.png" alt="">
-              <div class="section__intro_text">Features</div>
+              <div class="section__intro_text">Testimonials</div>
             </div>
             <h3 class="section__heading features__heading">By the same illusion which lifts the horizon.</h3>
         </div>
