add transform on buttons and menu items

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </section>
       <footer class="footer">
         <div class="footer__content">
-          <form class="footer__form" action="">
+          <form class="footer__form" action="" method="POST">
               <div class="section__intro">
                 <img class="section__intro_logo" src="images/blue-doters.png" alt="">
                 <div class="section__intro_text">Send us a message</div>
